--- a/password/password.vcxproj
+++ b/password/password.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5c9a7388-be77-4c6d-b8db-f83516384758}</ProjectGuid>
-    <RootNamespace>gobanggame</RootNamespace>
+    <ProjectGuid>{c9195717-2375-49c5-8414-9644234360d9}</ProjectGuid>
+    <RootNamespace>password</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>parts</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,10 +128,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="gobang.h" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="temp.cpp" />
-    <ClCompile Include="temp1.cpp" />
+    <ClCompile Include="password.cpp" />
+    <ClCompile Include="register.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="password.h" />
+    <ClInclude Include="register.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
