--- a/password/password.vcxproj.filters
+++ b/password/password.vcxproj.filters
@@ -18,14 +18,19 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="gobang.h">
+    <ClCompile Include="password.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="register.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="password.h">
       <Filter>头文件</Filter>
-    </ClCompile>
-    <ClCompile Include="temp.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="temp1.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
+    </ClInclude>
+    <ClInclude Include="register.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
