--- a/password/password.vcxproj.filters
+++ b/password/password.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="register.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="login.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="password.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="register.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="login.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
